//grpc 登陆服务配置文件

syntax = "proto3";
package user.service.v1;
option go_package = "evn_user/pkg/service/user.service.v1";


message CaptchaRequest {
  string email = 1;
}
message CaptchaResponse{
  string data = 1;
}
message RegisterRequest {
  string email = 1;
  string name = 2;
  string password =3;
  string mobile = 4;
  string captcha = 5;
}
message RegisterResponse {
  int64 id = 1;
  string username = 2;
  string photo = 3;
  string token = 4;
  string created_at = 5;
}
message LoginRequest {
  string username = 1;
  string password = 2;
}
message LoginResponse{
  int64 id = 1;
  string username = 2;
  string photo = 3;
  string token = 4;
  string created_at = 5;
}
message TokenResponse{
  string accessToken = 1;
  string refreshToken = 2;
  string tokenType = 3;
  int64 accessTokenExp = 4;
}

message TokenRequest {
  string token = 1;
  string secret = 2;
  bool is_encrypt = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

service UserService {
  rpc GetCaptcha(CaptchaRequest) returns (CaptchaResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc TokenVerify(TokenRequest) returns (LoginResponse){}
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse) {}
}